--- a/Site-alura-space/alura-space/src/componentes/rodape/rodape.module.scss
+++ b/Site-alura-space/alura-space/src/componentes/rodape/rodape.module.scss
@@ -7,6 +7,8 @@
     font-family: $fonte-normal;
     color: white;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     &__lista{
         padding: 0;
