--- a/Site-alura-space/alura-space/src/styles/_variaveis.scss
+++ b/Site-alura-space/alura-space/src/styles/_variaveis.scss
@@ -3,6 +3,7 @@ $fonte-normal: "GandhiSansRegular";
 $fonte-bold: "GandhiSansBold";
 //CORES
 $cor-do-texto: #d9d9d9;
+$tag-color: #d9d9d94f;
 $azul-escuro: #041833;
 $azul-claro: #154580;
 $azul-rodape: #04244f;
