--- a/site-routes/messi - Copia/src/componentes/Banner/Banner.module.css
+++ b/site-routes/messi - Copia/src/componentes/Banner/Banner.module.css
@@ -1,6 +1,6 @@
 .banner {
     padding: 3rem 7.5rem 6.25rem;
-    background-color: #70A6DA;
+    background-color: var(--azul-escuro);
     color: var(--branco);
     display: grid;
     grid-template-columns: 1fr 1fr;
